--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Hello world!!</h1>
-    <script src="index_control_flow.js">
+    <script src="index_objects.js">
     </script>
 
 </body>
